[metadata]
name = 
author = 
author-email = 
license = MIT
long_description = file: README.md
url = 
requires-python = >=3.8
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
