[metadata]
name = fetch_hackernews
version = 0.0.1
author = Bodo Schönfeld
author-email = bodo.schoenfeld@niftycode.de
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/niftycode/fetch_hackernews
requires_python = >=3.10
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
