[metadata]
name = fetch_hackernews
version = 1.0.6
author = Bodo Schönfeld
author_email = bodo.schoenfeld@niftycode.de
url = https://github.com/niftycode/fetch_hackernews
description = Fetch website data from https://news.ycombinator.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
requires_python = >=3.8
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools >=50.0.0
install_requires =
    beautifulsoup4
    requests
    setuptools

[options.entry_points]
console_scripts =
    fetch_hackernews = fetch_hackernews.main:main

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
